# eldenring-companion

./: .gitignore  Cargo.toml  README.md
paramextract/: Cargo.toml  genstruct.py
paramextract/data/: .gitignore  EquipParamWeapon.txt
paramextract/packed_struct.rs/packed_struct/src/: lib.rs  types_basic.rs  types_bits.rs  types_generic.rs  types_num.rs  types_reserved.rs  types_tuples.rs
paramextract/packed_struct.rs/packed_struct_codegen/src/: common.rs  pack.rs  pack_codegen.rs  pack_codegen_docs.rs  pack_parse.rs  primitive_enum.rs  utils_syn.rs
paramextract/src/: armor.rs  bnd4.rs  main.rs  optimize.rs  params.rs  regulation.rs  scaling.rs  stats.rs  utils.rs  weaponinfo.rs
paramextract/src/erformat/: mod.rs
paramextract/src/structs/: attack_element_correct.rs  calc_correct_graph.rs  equip_param_weapon.rs  mod.rs  reinforce_param_weapon.rs
paramextractDS1R/: Cargo.toml
paramextractDS1R/data/: .gitignore  weapons.txt
paramextractDS1R/src/: main.rs
soulsformats/: Cargo.toml  genstruct.py
soulsformats/packed_struct.rs/packed_struct/: build.rs
soulsformats/packed_struct.rs/packed_struct/src/: debug_fmt.rs  packing.rs  primitive_enum.rs  types_array.rs  types_vec.rs
soulsformats/src/: armor.rs  lib.rs  optimize.rs  regulation.rs  scaling.rs  utils.rs
soulsformats/src/formats/: bnd3.rs  bnd4.rs  compression.rs  fmg.rs  mod.rs  params.rs
soulsformats/src/structs/: equip_param_protector.rs  equip_param_weapon.rs  mod.rs  sp_effect.rs
soulsformats/src/structs/ds1r/: calc_correct_graph.rs  (+6 more)
soulsformats/src/weaponinfo/: ds1r.rs  er.rs  mod.rs
(+31 files in other folders)
