[package]
name = "paramextract"
version = "0.1.0"
edition = "2021"

[dependencies]
ertypes = { path = "../ertypes" }
eldenring-companion = { path = "../eldenring-companion" }

anyhow = "1.0.86"
byteorder = "1.5.0"
clap = { version = "4.5.11", features = ["derive"] }
libaes = "0.7.0"
memchr = "2.7.4"
packed_struct = { path = "packed_struct.rs/packed_struct" }
rayon = "1.10.0"
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.121"
zstd = "0.13.2"