[package]
name = "paramextractDS1R"
version = "0.1.0"
edition = "2021"

[dependencies]
ertypes = { path = "../ertypes" }
soulsformats = { path = "../soulsformats" }

anyhow = "1.0.86"
clap = { version = "4.5.11", features = ["derive"] }
rayon = "1.10.0"
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.121"